Bug Fixes (#69)
* Resolve incorrect naming of 404 page

* Resolve issue with profile image sizing

* Reduce min-height of about-banner

* Add max-height to images on within a post

* Move app css in to seperate file, improve nav bar layout on decreased width screens

* Resolve issue with pre tags overflowing out of parent container

* Resolve issue with incorrect button spacing

* Fix bug where the vote pop up would flicker after vote was cast

* Add styling to <code> blocks

* Resolve issue where the post-card status indicator wasn't showing correct status

* Disable enter contest button if the contest deadline has expired

--- a/client/src/pages/view-contest/view-contest.css
+++ b/client/src/pages/view-contest/view-contest.css
@@ -13,6 +13,7 @@
 .post-container img {
     max-width: 100%;
     height: auto;
+    max-height: 350px;
 }
 
 .enter-contest {
